kde4libs (4:4.6.4-2) UNRELEASED; urgency=low


 -- Modestas Vainius <modax@debian.org>  Thu, 30 Jun 2011 23:39:39 +0300

kde4libs (4:4.6.4-1) unstable; urgency=low

  * New upstream release:
    - fixes crash in KIconEngine (Closes: #628483)

  [ Modestas Vainius ]
  * FindPythonLibrary.cmake: if build type is Debian, pass --layout=deb to
    FindLibPython.py (patch findpythonlibrary_layout_deb_on_debian.diff).
  * Merge 4:4.4.5-2+squeeze2:
    - add ktar_header_checksum_fix.diff and adapt to upstream changes;
    - add ktar_longlink_length_in_bytes.diff and adapt to upstream changes.

  [ José Manuel Santamaría Lema ]
  * Remove upstream_fix_job-on-hold_reuse_logic.diff, applied upstream.
  * Update symbols files.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Thu, 23 Jun 2011 13:04:16 +0300

kde4libs (4:4.6.3-3) unstable; urgency=low

  [ Pino Toscano ]
  * Move kdeui.upd to kdelibs5-plugins, and make it break/replace
    kdelibs5-data << 4:4.6.3-3~. (Closes: #629188)

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sat, 04 Jun 2011 22:18:48 +0300

kde4libs (4:4.6.3-2) unstable; urgency=low

  [ Felix Geyer ]
  * Drop duplicate build-dependency on libenchant-dev.
  * kdelibs5-plugins breaks/replaces kdelibs5-dev as the Qt Designer plugins
    have been moved there.

  [ Pino Toscano ]
  * Drop the go.xml kate syntax highlighting, as kate-syntax-go will provide
    it. (Closes: #628161)
  * hurd_support.diff: do not turn the linker warnings as errors.

  [ Modestas Vainius ]
  * Confirm symbol files on all Debian arches.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Mon, 30 May 2011 17:31:10 +0300

kde4libs (4:4.6.3-1) unstable; urgency=low

  * New upstream release.

  [ Modestas Vainius ]
  * Confirm symbol files on more debian arches.
  * Merge 4:4.4.5-4 and 4:4.4.5-5:
    - drop cve_2011_1168_konqueror_xss.diff, cve_2010_3170_cn_wildcards.diff,
      cve_2011_1094_ssl_verify_hostname.diff - merged upstream;